# courserwork

fedin_courser_chess/: .build.bat  CMakeLists.txt  main.cpp
fedin_courser_chess/Doxy/: Doxyfile
fedin_courser_chess/headers/: Bishop.h  Board.h  Game.h  GamePiece.h  King.h  Knight.h  Menu.h  Pawn.h  Queen.h  Rook.h
